# Sentum

./: .gitignore  CMakeLists.txt  DISCLAIMER.md  LICENSE.md  README.md  clean.sh
config/: config.json  risk.json  secrets.json
include/: api.hpp  chart.hpp  config.hpp  logger.hpp  risk.hpp  rsi.hpp  secrets.hpp  strategy.hpp  trader.hpp  wsclient.hpp
src/: __main.cpp  api.cpp  binance.cpp  chart.cpp  config.cpp  logger.cpp  main.cpp  risk.cpp  rsi.cpp  secrets.cpp  sma.cpp  strategy.cpp  trader.cpp  utils.cpp  wsclient.cpp
src/sentum/api/: BinanceRestClient.cpp  BinanceRestClient.hpp  BinanceWebsocketClient.cpp  BinanceWebsocketClient.hpp  binance.cpp  binance.hpp  websocket.cpp  websocket.hpp
src/sentum/api/model/: MarketInfo.hpp  kline.hpp
src/sentum/chart/: chart.cpp  chart.hpp
src/sentum/collector/: Collector.cpp  Collector.hpp  collector.cpp  collector.hpp
src/sentum/collector/utils/: CollectorLogger.cpp  CollectorLogger.hpp
src/sentum/core/: ExecutionEngine.cpp  ExecutionEngine.hpp  engine.cpp  engine.hpp  trader.cpp  trader.hpp
src/sentum/risk/: RiskManager.cpp  RiskManager.hpp
src/sentum/scanner/: SymbolScanner.cpp  SymbolScanner.hpp  scanner.cpp  scanner.hpp
src/sentum/strategy/: IStrategy.hpp  RsiStrategy.hpp  SmaStrategy.hpp  StrategyFactory.hpp  rsi.cpp  sma.cpp  sma.hpp  strategy.cpp
src/sentum/trader/: TradeBuilder.cpp  TradeBuilder.hpp  TradeEngine.cpp  TradeEngine.hpp  TradeExecutor.cpp  TradeExecutor.hpp  TradeLogger.cpp  TradeLogger.hpp  TradeValidator.cpp  TradeValidator.hpp  trader.cpp  trader.hpp
src/sentum/trader/types/: RiskConfig.hpp  TradeAction.hpp  TradePosition.hpp  risk_config.hpp  trade_action.hpp  trade_position.hpp
src/sentum/trader/utils/: RiskConfigLoader.cpp  RiskConfigLoader.hpp  TradeLogger.cpp
src/sentum/ui/: UiConsole.cpp  UiConsole.hpp  console.cpp  console.hpp  panel.cpp  panel.hpp  ui.cpp  ui.hpp
src/sentum/utils/: AsyncLogger.cpp  AsyncLogger.hpp  ConfigLoader.cpp  ConfigLoader.hpp  Database.cpp  Database.hpp  RiskConfigLoader.cpp  SecretsLoader.cpp  config.cpp  config.hpp  database.cpp  database.hpp  helper.hpp  risk_config.cpp  secrets.cpp  style.hpp
src/sentum/websocket/: wsclient.cpp
